--- a/engine/src/main/resources/application.properties
+++ b/engine/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=ContextAI
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/context_ai
-spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/context_ai}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASSWORD:}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
