--- a/engine/src/main/resources/application.properties
+++ b/engine/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.application.name=ContextAI
 spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/context_ai}
 spring.datasource.username=${DB_USER:postgres}
 spring.datasource.password=${DB_PASSWORD:}
+groq.api.key=${GROQ_API_KEY}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
